src/test/ui/type-alias-impl-trait/declared_but_never_defined.full_tait.stderr
error: could not find defining uses
  --> $DIR/declared_but_never_defined.rs:8:12
   |
LL | type Bar = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

